argocd/install/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/cluster: kaas-ole-dev
    external-dns.alpha.kubernetes.io/hostname: argocd.dev.aws.kaas.datapwn.com
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.dev.aws.kaas.datapwn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
